# AssetLedger

./: .gitignore  AssetLedger.spec  README.md  build_windows.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run_asset_ledger.bat
packaging/: asset_ledger_launcher.py  build_windows.py
src/asset_ledger/: __init__.py  app.py  asset_dialog.py  asset_service.py  excel_repository.py  main_window.py  models.py  settings_dialog.py  snapshot.py  widgets.py
tests/: test_app.py  test_asset_service.py  test_excel_repository.py  test_gui.py
