[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-ledger"
version = "0.1.0"
description = "A desktop asset ledger backed by a single Excel workbook."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.2",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[project.scripts]
asset-ledger = "asset_ledger.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

